2022/07/23 17:34 css 회원파트 전체적으로 css 추가

--- a/com-project-clean/src/main/resources/static/css/common/commonLayout.css
+++ b/com-project-clean/src/main/resources/static/css/common/commonLayout.css
@@ -28,8 +28,8 @@ section{
 }
 
 .upnavvar{
-    background-color: rgba(104, 228, 255, 1);
-}
+    background-color: #7DBEED ;
+    }
 
 .downnavvar{
     background-color: rgba(217, 217, 217, 1);
