--- a/com-project-clean/src/main/resources/templates/admin/adminAside.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminAside.html
@@ -67,12 +67,91 @@ text-align: center;}
   padding-right: 8px;
 }
 
+
+
+
+
+/* 직원 part css */
 .section{
     font-family: 'MinSans-Medium';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    margin-left: 20px !important;
+	margin-top: 20px !important;
 }
+
+.selectBox{
+	margin-bottom: 20px;
+}
+ .searchBox button {
+    margin-top:-6px;
+    width:70px;
+    height:32px;
+	border-radius: 5px;
+    font-size:13px;
+    padding: 0; 
+    background-color: #7dbeed96; 
+    border-style: none;
+    }
+
+ .searchBox button:hover{
+  background:  #7DBEED ;
+ }
+ .tableBox button{
+	 border-radius: 5px;
+	 width:40px; 
+	 height:30px;
+	 margin: 5px;
+     background-color: #7dbeed96;
+     border-color:gray;
+     border-style: none;
+ }
+ 
+ .pagingBox button{
+	 border-radius: 5px;
+	 width:40px; 
+	 height:30px;
+	 margin: 5px;
+     background-color: #7dbeed96;
+     border-color:gray;
+     border-style: none;
+ }
+ 
+ .pagingBox button:hover {
+  background:  #7DBEED ;
+}
+
+ .buttonBox button{
+	 border-radius: 5px;
+	 width:100px; 
+	 height:35px;
+	 margin: 5px;
+	 margin-top: 20px;
+     background-color: #7dbeed96;
+     border-color:gray;
+     border-style: none;
+	 transition: all 0.1s ;
+}     
+
+.buttonBox button:hover {
+  background:  #7DBEED ;
+}
+
+/* detail 앞 글자들 */
+.subTitle {
+font-weight: bold;
+}
+
+.warning{
+	font-size: 15px;
+	color: red;
+	
+}
+     
+     
+     
+     
+     
+ 
 
 
 /* Some media queries for responsiveness */
