--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/waitingEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/waitingEmployee.html
@@ -7,10 +7,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <style type="text/css">
 
-.section{
-	margin-left: 0 !important;
-	margin-top: 0 !important;
-}
 /* 결재 테이블 */
 .confirmTableBox td {
 	border: solid 1px;
@@ -66,17 +62,17 @@
         </colgroup>
         <thead>
           <tr>
-            <td >결재 신청 날짜</td>
-            <td  colspan="2">
+            <td class="subTitle">결재 신청 날짜</td>
+            <td colspan="2">
               <div name="confirmDate" th:text="${waitingEmployee.RequestDate}"></div>
             </td>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td rowspan="3">결재</td>
-            <td >인사담당자</td>
-            <td >대표</td>
+            <td class="subTitle" rowspan="3">결재</td>
+            <td class="subTitle">인사담당자</td>
+            <td class="subTitle">대표</td>
           </tr>
           <tr class="comfirmBox">
             <td>
@@ -107,66 +103,66 @@
 	            </colgroup>
 	            <thead>
 	              <tr>
-	                <td>직원번호</td>
+	                <td class="subTitle">직원번호</td>
 	                <td th:text="${waitingEmployee.employeeNo}"></td>
 
 		             <td style="display: none;"><input name="adminNo"></td>
 		             <td style="display: none;" id="adminNoValue" sec:authentication="principal.adminNo"></td>
 
 	                <td style="display: none;"><input name="employeeNo" th:value="${waitingEmployee.employeeNo}"></td>
-	                <td>이름</td>
+	                <td class="subTitle">이름</td>
 	                <td th:text="${waitingEmployee.employeeName}"></td>
 	                <td colspan="2" rowspan="3"> <img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${waitingEmployee.employeePictureSaveName}"></td>
 	              </tr>
 	              <tr>
-	                <td>ID</td>
+	                <td class="subTitle">ID</td>
 	                <td th:text="${waitingEmployee.employeeId}"></td>
-	                <td>전화번호</td>
+	                <td class="subTitle">전화번호</td>
 	                <td th:text="${waitingEmployee.employeePhone}"></td>
 	              </tr>
 	              <tr>
-	                <td>생년월일</td>
+	                <td class="subTitle">생년월일</td>
 	                <td th:text="${waitingEmployee.employeeBirth}"></td>
-	                <td>퇴사여부</td>
+	                <td class="subTitle">퇴사여부</td>
 	                <td th:text="${waitingEmployee.employeeRetireYn}"></td>
 	              </tr>
 	            </thead>
 	            <tbody>
 	              <tr>
-	                <td>이메일</td>
+	                <td class="subTitle">이메일</td>
          		    <td colspan="5" th:text="${waitingEmployee.employeeEmail}"></td>
 	              </tr>
 	              <tr>
-	                <td>우편번호</td>
+	                <td class="subTitle">우편번호</td>
 	                <td th:text="${address.addressNo}"></td>
-	                <td>기본주소</td>
+	                <td class="subTitle">기본주소</td>
 	                <td colspan="3" th:text="${address.address}"></td>
 	              </tr>
 	              <tr>
-	                <td>상세주소</td>
+	                <td class="subTitle">상세주소</td>
 	                <td colspan="5" th:text="${address.addressDetail}"></td>
 	              </tr>
 	              <tr>
-	                <td>입사일</td>
+	                <td class="subTitle">입사일</td>
 	                <td th:text="${waitingEmployee.employeeHireDate}"></td>
-	                <td>퇴사일</td>
+	                <td class="subTitle">퇴사일</td>
 	                <td colspan="3" th:text="${waitingEmployee.employeeRetireDate}"></td>
 	              </tr>
 	              <tr>
-	                <td>누적경고횟수</td>
+	                <td class="subTitle">누적경고횟수</td>
 	                <td th:text="${waitingEmployee.employeeSumCount}"></td>
-	                <td>누적근무시간</td>
+	                <td class="subTitle">누적근무시간</td>
 	                <td colspan="3" th:text="${waitingEmployee.employeeSumTime}"></td>
 	              </tr>
 	              <tr>
-	                <td>마지막 로그인 일자</td>
+	                <td class="subTitle">마지막 로그인 일자</td>
 	                <td th:text="${waitingEmployee.employeeLastLoginDate}"></td>
-	                <td>블랙리스트 여부</td>
+	                <td class="subTitle">블랙리스트 여부</td>
 	                <td colspan="3" th:text="${waitingEmployee.employeeBlackListYn}"></td>
 	              </tr>
 	              <tr>
 	                <td>
-	                  <div style="line-height: 150px;">반려사유</div>
+	                  <div class="subTitle" style="line-height: 150px;">반려사유</div>
 	                </td>
 	                <td colspan="5">
 	                  <textarea name="Reason" id="returnReason" cols="70" rows="10" style="resize: none;"
