--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
@@ -7,8 +7,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <style>
 	.section{
-		margin-left: 0 !important;
-		margin-top: 0 !important;
 		width: 1000px;
 	}
 	.tableBox{
@@ -23,6 +21,7 @@
 	}
 	.searchBox{
 		text-align: right;
+		margin-bottom: 10px;
 	}
 	.pagingBox{
 		 text-align: center;
@@ -60,6 +59,8 @@
 		</form>
 		<!-- 퇴사자 검색 -->
 		<form name="retireYForm" id="retireYSearch">
+		
+		
 		<span>퇴사자 조회</span>                
 			<select name="categoryY" id="categoryY">
 				<option value="all" selected>전체</option>
@@ -384,7 +385,7 @@
 
 				for (let i = 0; i < employee.length; i++) {
 					employee[i].onmouseenter = function() {
-						this.parentNode.style.backgroundColor = "rgb(50,150,250)";
+						this.parentNode.style.backgroundColor = "#7dbeed96";
 						this.parentNode.style.cursor = "pointer";
 					}
 					employee[i].onmouseout = function() {
