--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacation.html
@@ -8,10 +8,9 @@
 </head>
 <style>
 	.section{
-		margin-left: 0 !important;
-		margin-top: 0 !important;
 		width: 1000px;
 	}
+	
 	.tableBox{
 		width: 1000px;
 		border: 1px solid black;
@@ -24,6 +23,7 @@
 	}
 	.searchBox{
 		text-align: right;
+		margin-bottom: 10px;
 	}
 	.pagingBox{
 		 text-align: center;
@@ -303,7 +303,7 @@
 
 		for (let i = 0; i < vacationList.length; i++) {
 			vacationList[i].onmouseenter = function() {
-				this.parentNode.style.backgroundColor = "rgb(50,150,250)";
+				this.parentNode.style.backgroundColor = "#7dbeed96";
 				this.parentNode.style.cursor = "pointer";
 			}
 			vacationList[i].onmouseout = function() {
