--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacationReturnList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectAllVacationReturnList.html
@@ -7,8 +7,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <style>
 	.section{
-		margin-left: 0 !important;
-		margin-top: 0 !important;
 		width: 1000px;
 	}
 	.tableBox{
@@ -23,6 +21,7 @@
 	}
 	.searchBox{
 		text-align: right;
+		margin-bottom: 10px;
 	}
 	.pagingBox{
 		 text-align: center;
@@ -291,7 +290,7 @@
 
 		for (let i = 0; i < vacationList.length; i++) {
 			vacationList[i].onmouseenter = function() {
-				this.parentNode.style.backgroundColor = "rgb(50,150,250)";
+				this.parentNode.style.backgroundColor = "#7dbeed96";
 				this.parentNode.style.cursor = "pointer";
 			}
 			vacationList[i].onmouseout = function() {
